<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/example_text"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="Pick a button and test your luck!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/rock_button"
        android:text="@string/rock"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/paper_button"
        android:text="@string/paper"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/scissors_button"
        android:text="@string/scissors"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/spock_button"
        android:text="@string/spock"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/lizard_button"
        android:text="@string/lizard"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/answer_text"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>